# osmium-history-splitter

./: .gitignore  CMakeLists.txt  README.md
include/: chunked_array.hpp  mmapped_array.hpp  processor.hpp  splitter.hpp  tile_grid.hpp  tile_map_array.hpp  util.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_chunked_array.cpp  test_single_node.cpp  test_single_node.osm  test_single_relation.cpp  test_single_relation.osm  test_single_way.cpp  test_single_way.osm  test_splitter_nodes.cpp  test_splitter_relations.cpp  test_splitter_ways.cpp  test_vx2fmt.cpp
test/include/: tileset.hpp  utils.hpp
vx2fmt/: CMakeLists.txt  vx2fmt.cpp  vx2fmt.hpp
